Change log
==========

3.3 (unreleased)
----------------


3.2 (2021-09-03)
----------------
- reorganized package to use current zopefoundation standards

- claim compatibility with Python 3.9 and Zope 5

- fixed type error on adding session items via ZMI test page


3.1 (2021-01-01)
----------------
- revised ZMI 'Test Adding Items to Session'


3.0 (2020-08-07)
----------------
- packaging cleanup and test fixing due to shifting dependencies

- drop Zope 2 compatibility claims and tests


2.5 (2019-11-13)
----------------
- implement transaction savepoint support
  (`#3 <https://github.com/dataflake/Products.mcdutils/issues/3>`_)


2.4 (2019-10-23)
----------------
- attempt to hide session values that may contain passwords in ``__repr__``
  which is used when rendering the ``REQUEST`` object as string.


2.3 (2019-10-13)
----------------
- rely on the Zope 4.x branch for Python 2 compatibility

- update description to replace Zope2 wording with just Zope

- reorganize source folder structure and drop the ``src`` folder


2.2 (2019-05-21)
----------------
- add an implementation for ``has_key`` which is gone under Python 3


2.1 (2019-03-31)
----------------
- fix wrong method call during cache manager record invalidation
  (`#1 <https://github.com/dataflake/Products.mcdutils/issues/1>`_)


2.0 (2019-03-28)
----------------
- make sure ``zcache.aggregateKey`` does not create unsuitable MemCache keys

- allow storing values that don't conform to ``IMemCacheMapping``

- add ability to set a title for a MemCacheZCacheManager

- Python 3 compatibility

- switch to the ``python-memcached`` library and remove the old ``memcache``
  library module inside this package, which is actually a really old version
  of ``python-memcached``.

Possible breaking change
~~~~~~~~~~~~~~~~~~~~~~~~
The objects returned by Zope's session data manager are implicitly expected
to support Acquisition. Zope's session data manager uses it to insert itself