@@ -2,18 +2,27 @@
 # https://github.com/zopefoundation/meta/tree/master/config/zope-product
 [meta]
 template = "zope-product"
-commit-id = "7f5b73fe9d2bcbabafaef5f69dd97408a142d42a"
+commit-id = "4f0f7596"
 
 [python]
 with-windows = false
 with-pypy = false
 with-future-python = false
-with-legacy-python = true
 with-docs = true
 with-sphinx-doctests = false
+with-macos = false
 
 [tox]
 use-flake8 = true
+additional-envlist = [
+    "py27",
+    "py35",
+    "py36",
+    ]
+testenv-commands-pre = [
+    "py27,py35,py36: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test",
+    "!py27-!py35-!py36: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test",
+    ]
 
 [coverage]
 fail-under = 84
@@ -34,4 +43,11 @@ additional-rules = [
     "recursive-include docs *.png",
     "recursive-include src *.gif",
     "recursive-include src *.pt",
+    ]
+
+[github-actions]
+additional-config = [
+    "- [\"2.7\",   \"py27\"]",
+    "- [\"3.5\",   \"py35\"]",
+    "- [\"3.6\",   \"py36\"]",
     ]
