@@ -20,7 +20,7 @@ ignore =
 force_single_line = True
 combine_as_imports = True
 sections = FUTURE,STDLIB,THIRDPARTY,ZOPE,FIRSTPARTY,LOCALFOLDER
-known_third_party = memcache, six
+known_third_party =memcache, six
 known_zope =
 known_first_party =
 default_section = ZOPE
