@@ -29,6 +29,8 @@ setup(name='Products.mcdutils',
         'Programming Language :: Python :: 3.7',
         'Programming Language :: Python :: 3.8',
         'Programming Language :: Python :: 3.9',
+        'Programming Language :: Python :: 3.10',
+        'Programming Language :: Python :: 3.11',
         'Topic :: Internet :: WWW/HTTP :: Session'],
       keywords='session memcache memcached Products',
       author='Tres Seaver and contributors',
