@@ -4,26 +4,27 @@
 minversion = 3.18
 envlist =
     lint
-    py27
-    py35
-    py36
     py37
     py38
     py39
+    py310
+    py311
     docs
     coverage
+    py27
+    py35
+    py36
 
 [testenv]
 skip_install = true
-# We need to pin setuptools until we have zc.buildout 3.0.
 deps =
-    setuptools < 52
-    zc.buildout
+    zc.buildout >= 3.0.1
+    wheel > 0.37
 commands_pre =
-    py27,py35: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
-    !py27-!py35: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    py27,py35,py36: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    !py27-!py35-!py36: {envbindir}/buildout -nc {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
 commands =
-    {envbindir}/test {posargs:-cv}
+    {envdir}/bin/test {posargs:-cv}
 
 [testenv:lint]
 basepython = python3
@@ -33,7 +34,6 @@ allowlist_externals =
     mkdir
 commands =
     isort --check-only --diff {toxinidir}/src {toxinidir}/setup.py
-    - flake8 --format=html {toxinidir}/src {toxinidir}/setup.py
     flake8 {toxinidir}/src {toxinidir}/setup.py
     check-manifest
     check-python-versions
@@ -42,8 +42,6 @@ deps =
     check-python-versions
     flake8
     isort
-    # helper to generate HTML reports:
-    flake8-html
     # Useful flake8 plugins that are Python and Plone specific:
     flake8-coding
     flake8-debugger
@@ -60,8 +58,6 @@ commands =
 [testenv:docs]
 basepython = python3
 skip_install = false
-# Until repoze.sphinx.autointerface supports Sphinx 4.x we cannot use it:
-deps = Sphinx < 4
 extras =
     docs
 commands_pre =
@@ -76,16 +72,14 @@ allowlist_externals =
 deps =
     {[testenv]deps}
     coverage
-    coverage-python-version
 commands =
     mkdir -p {toxinidir}/parts/htmlcov
-    coverage run {envbindir}/test {posargs:-cv}
+    coverage run {envdir}/bin/test {posargs:-cv}
     coverage html
     coverage report -m --fail-under=84
 
 [coverage:run]
 branch = True
-plugins = coverage_python_version
 source = Products.mcdutils
 
 [coverage:report]
